--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "json-server-api",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "json-server --watch db.json --port 10000"
+  },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "json-server": "^1.0.0-beta.3",
