--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,7 +2,7 @@
   "name": "json-server-api",
   "version": "1.0.0",
   "scripts": {
-    "start": "json-server --watch db.json --port 10000"
+    "start": "npx json-server db.json"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
