--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,12 +2,9 @@
   "name": "json-server-api",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx json-server db.json"
+    "start": "node index.js"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.8",
-    "json-server": "^1.0.0-beta.3",
-    "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.8"
+    "json-server": "^1.0.0-beta.3"
   }
 }
